# ommx

./: .editorconfig  .gitattributes  .gitignore  .python-version  .readthedocs.yaml  AGENTS.md  ARTIFACT.md  ARTIFACT_V3.md  CLAUDE.md  COLUMN_GENERATION.md  CONSTRAINT_ID_REFACTOR_WIP.md  Cargo.toml  DEVELOPMENT.md  IMPLEMENTATION_PLAN.md  LLMs.md  LLMs.txt  MESSAGE.md  METADATA_STORAGE_V3.md  PR_DESCRIPTION.md  PYTHON_SDK_MIGRATION_GUIDE.md  README.md  RUST_SDK_MIGRATION_GUIDE.md  SPECIAL_CONSTRAINTS_V3.md  TODO.md  Taskfile.yml  pyproject.toml  requirements.txt  ruff.toml  test_k_hot.py
cpp/: CMakeLists.txt
cpp/cmake/: ommxConfig.cmake.in
cpp/ommx/v1/: constraint.pb.cc  constraint.pb.h  decision_variables.pb.cc  decision_variables.pb.h  function.pb.cc  function.pb.h  instance.pb.cc  instance.pb.h  linear.pb.cc  linear.pb.h  polynomial.pb.cc  polynomial.pb.h  quadratic.pb.cc  quadratic.pb.h  solution.pb.cc  solution.pb.h
doc/: _toc.yml  (+5 more)
docs/: _config.test.yml  conf_base.py  pyproject.toml  scip-installation-strategy.md
docs/api/: api_reference.json  index.rst  ommx.artifact.rst  ommx.experiment.rst  ommx.rst  ommx.v1.rst
docs/api/_items/: ommx.AdapterCapabilities.rst  ommx.AdditionalCapability.rst  ommx.AttachedConstraint.rst  ommx.AttachedDecisionVariable.rst  ommx.AttachedIndicatorConstraint.rst  ommx.AttachedOneHotConstraint.rst  ommx.AttachedSos1Constraint.rst  ommx.Bound.rst  ommx.CapabilityProfile.rst  ommx.Constraint.rst  ommx.ConstraintRequirement.rst  ommx.DecisionVariable.rst  ommx.DecisionVariableRole.rst  ommx.DegreeBound.rst  ommx.DegreeLimit.rst  ommx.Equality.rst  ommx.EvaluatedConstraint.rst  ommx.EvaluatedDecisionVariable.rst  ommx.EvaluatedNamedFunction.rst  ommx.ExactIntegerSlackError.rst  ommx.Function.rst  ommx.IndicatorConstraint.rst  ommx.InfeasibleDetected.rst  ommx.Instance.rst  ommx.InstanceClass.rst  ommx.InstanceClassClause.rst  ommx.InstanceClassClauseReport.rst  ommx.InstanceClassMembershipReport.rst  ommx.InstanceClassMismatch.rst  ommx.InstanceRequirements.rst  ommx.Kind.rst  ommx.Linear.rst  ommx.LogEncodingError.rst  ommx.NamedFunction.rst  ommx.OneHotConstraint.rst  ommx.OneHotPromotionCertificate.rst  ommx.OneHotPromotionWitness.rst  ommx.Optimality.rst  ommx.Parameter.rst  ommx.ParametricInstance.rst  (+102 more)
docs/api_reference/: Taskfile.yml  conf.py  index.rst  pyproject.toml  requirements.txt
docs/api_reference/api/: api_reference.json  index.rst  ommx.artifact.rst  ommx.v1.rst
docs/design/: indicator_constraint.md  logical_memory_profile.md
docs/en/: .readthedocs.yaml  .readthedocs.yml  Taskfile.yml  _config.yml  _toc.yml  conf.py  index.md  introduction.ipynb  introduction.md  myst.yml
docs/en/advanced/: about.md  column_generation_openjij.md  index.md
docs/en/api/: ommx.artifact.rst
docs/en/concept/: architecture.ipynb
docs/en/migration/: python_sdk.md  python_sdk_v1_to_v2.md  python_sdk_v2_to_v3.md
docs/en/ommx_ecosystem/: links.ipynb  solver_adapter_guide.ipynb
docs/en/ommx_message/: architecture.ipynb  function.ipynb  instance.ipynb  sample_set.ipynb  solution.ipynb
docs/en/release_note/: ommx-1.5.0.ipynb  ommx-1.5.0.md  ommx-1.6.0.ipynb  ommx-1.6.md  ommx-1.7.0.ipynb  ommx-1.7.0.md  ommx-1.7.md  ommx-1.8.0.ipynb  ommx-1.8.md  ommx-1.9.0.ipynb  ommx-1.9.0.md  ommx-2.0.0.md  ommx-2.0.md  ommx-2.1.0.md  ommx-2.1.md  ommx-2.2.0.md  ommx-2.2.md  ommx-2.3.0.md  ommx-2.3.md  ommx-2.4.0.md  ommx-2.4.md  ommx-2.5.0.md  ommx-2.5.md  ommx-2.6.md  ommx-3.0.md
docs/en/tutorial/: download_miplib_instance.ipynb  download_miplib_instance.md  download_qplib_instance.ipynb  download_qplib_instance.md  experiment_management.md  implement_adapter.ipynb  implement_adapter.md  share_in_ommx_artifact.ipynb  share_in_ommx_artifact.md  solve_with_ommx_adapter.ipynb  solve_with_ommx_adapter.md  switching_adapters.ipynb  switching_adapters.md  tsp_sampling_with_openjij_adapter.ipynb  tsp_sampling_with_openjij_adapter.md
docs/en/user_guide/: adapter_diagnostics.md  adapter_initial_state.ipynb  adapter_initial_state.md  advanced_column_generation_openjij.md  capability_model.md  experiment.md  function.ipynb  function.md  instance.ipynb  instance.md  parametric_instance.ipynb  parametric_instance.md  sample_set.ipynb  sample_set.md  solution.ipynb  solution.md  solver_adapter.ipynb  special_constraints.md  supported_adapters.ipynb  supported_ommx_adapters.ipynb  supported_ommx_adapters.md  tracing.ipynb  tracing.md
docs/ja/: .readthedocs.yaml  Taskfile.yml  _config.yml  _toc.yml  conf.py  index.md  introduction.ipynb  introduction.md  myst.yml
docs/ja/migration/: python_sdk.md  (+2 more)
docs/pages/: _config.yml
docs/redirect/: index.html  introduction.html
docs/source/: conf.py
python/: Cargo.toml  README.md  Taskfile.yml  generate_llms_md.py  generate_llms_txt.py  md2ipynb.py  protogen.py  pyproject.toml  revise_stub_file.py  set-version.py  update-docs-deps.py
python/docs/: requirements.txt
python/ommx/: Cargo.toml  Taskfile.yml  __init__.py  _ommx_rust.pyi  artifact.py  package-lock.json  package.json  pyproject.toml  test_pyodide.js  testing.py
python/ommx-column-generation/: README.md  pyproject.toml
python/ommx-gurobipy-adapter/: README.md  pyproject.toml
python/ommx-highs-adapter/: README.md  Taskfile.yml  pyproject.toml
python/ommx-openjij-adapter/: README.md  Taskfile.yml  pyproject.toml
python/ommx-pyomo-adapter/: Taskfile.yml  pyproject.toml
python/ommx-pyscipopt-adapter/: README.md  Taskfile.yml  pyproject.toml
python/ommx-python-mip-adapter/: README.md  Taskfile.yml  pyproject.toml
python/ommx-python-mip-adaptor/: README.md  pyproject.toml
python/ommx-tests/: pyproject.toml
python/src/: artifact.rs  builder.rs  descriptor.rs  evaluate.rs  lib.rs
python/tests/: test_artifact.py  test_generator.py  test_import.py
rust/dataset/: Cargo.toml
rust/ommx/: Cargo.toml  build.rs
rust/ommx-derive/: Cargo.toml
rust/ommx-pyo3-bridge/: Cargo.toml  README.md
rust/ommx-scip-adapter/: Cargo.toml  README.md  build.rs  wrapper.h
rust/protogen/: Cargo.toml
tests/pyo3-bridge-pyo3-029-compat/: Cargo.toml
(+1049 files in other folders)
