[workspace]
resolver = "2"
members = ["rust/ommx", "rust/protogen", "rust/dataset", "python/ommx"]

[workspace.package]
version = "2.1.1"
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"

[workspace.dependencies]
anyhow = "1.0.100"
approx = "0.5.1"
base64 = "0.22.1"
built = { version = "0.8.0", features = ["git2"] }
chrono = "0.4.42"
clap = { version = "4.5.51", features = ["derive"] }
colored = "3.0.0"
criterion = { package = "codspeed-criterion-compat", version = "2.8.0" }
csv = "1.3.0"
derive_more = "2.0.1"
directories = "6.0.0"
env_logger = "0.11.8"
flate2 = "1.1.4"
fnv = "1.0.7"
getset = "0.1.6"
glob = "0.3.3"
indexmap = "2.11.4"
indoc = "2.0.6"
insta = { version = "1.43.2", features = ["yaml"] }
itertools = "0.14.0"
katexit = "0.1.5"
log = "0.4.28"
maplit = "1.0.2"
num = "0.4.3"
ocipkg = "0.3.9"
ordered-float = "5.1.0"
petgraph = "0.8.3"
proptest = "1.8.0"
prost = "0.14.1"
prost-build = "0.14.1"
pyo3 = { version = "0.24.0", features = ["anyhow"] }
pyo3-log = "0.12.4"
pyo3-stub-gen = "0.13.1"
serde = { version = "1.0.228", features = ["derive"] }
serde-pyobject = "0.6.2"
serde_json = "1.0.145"
similar = "2.7.0"
smallvec = "1.15.1"
thiserror = "2.0.17"
url = "2.5.7"
uuid = { version = "1.18.1", features = ["v4"] }
zip = "6.0.0"

[profile.release]
debug = true
