[workspace]
resolver = "2"
members = [
    "rust/ommx",
    "rust/ommx-derive",
    "rust/protogen",
    "rust/dataset",
    "python/ommx",
]

[workspace.package]
version = "3.0.0-alpha.2"
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"

[workspace.dependencies]
anyhow = "1.0.100"
approx = "0.5.1"
base64 = "0.22.1"
built = { version = "0.8.0", features = ["git2"] }
chrono = "0.4.43"
clap = { version = "4.6.1", features = ["derive"] }
colored = "3.1.1"
criterion = { package = "codspeed-criterion-compat", version = "2.8.0" }
csv = "1.3.0"
derive_more = { version = "2.1.1", features = ["full"] }
directories = "6.0.0"
flate2 = "1.1.8"
fnv = "1.0.7"
getset = "0.1.6"
glob = "0.3.3"
http = "1.4.0"
indexmap = "2.14.0"
indoc = "2.0.6"
insta = { version = "1.46.1", features = ["yaml"] }
itertools = "0.14.0"
katexit = "0.1.5"
maplit = "1.0.2"
num = "0.4.3"
oci-client = { version = "0.16.1", default-features = false, features = ["rustls-tls"] }
oci-spec = "0.8.4"
ocipkg = { version = "0.4.0", default-features = false }
ordered-float = { version = "5.1.0", features = ["serde"] }
petgraph = "0.8.3"
proc-macro2 = "1.0.95"
proptest = "1.8.0"
prost = "0.12.0"
prost-build = "0.12.0"
quote = "1.0.40"
pyo3 = { version = "0.27.2", features = ["anyhow", "multiple-pymethods"] }
pyo3-stub-gen = "0.22.2"
pyo3-tracing-opentelemetry = "0.2.0"
rusqlite = { version = "0.37.0", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde-pyobject = "0.8.0"
serde_json = "1.0.149"
sha2 = "0.10.9"
similar = "3.1.0"
smallvec = "1.15.1"
syn = "2.0.101"
tempfile = "3.27.0"
thiserror = "2.0.18"
tokio = { version = "1.48.0", default-features = false, features = ["rt"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
url = "2.5.8"
uuid = { version = "1.23.1", features = ["v4"] }
zip = "8.6.0"

[workspace.lints.clippy]
approx_constant = "allow"

[profile.release]
debug = true
