[project]
name = "ommx_python_mip_adapter"
dynamic = ["version"]
description = "An adapter for the Python-MIP from/to OMMX."
authors = [
    { name="Jij Inc.", email="info@j-ij.com" },
]
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: Apache Software License",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "ommx >= 0.1.0, < 0.2.0",
    "mip",
]


[project.optional-dependencies]
dev = [
    "mypy",
    "numpy",
    "pyright",
    "pytest",
]


[project.urls]
Repository = "https://github.com/Jij-Inc/ommx-python-mip-adapter"
Issues = "https://github.com/Jij-Inc/ommx-python-mip-adapter/issues"


[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8", "wheel"]
build-backend = "setuptools.build_meta"


[tool.setuptools_scm]
version_file = "ommx_python_mip_adapter/_version.py"
