# NOTE: 
# pyproject.tomlはドキュメント生成用のものです。
# このような運用方法が適切かどうかは議論の余地があると考えられます。

[project]
name = "ommx-github-pages"
version = "1.4.2"
requires-python = ">=3.9, <3.13"
# ドキュメントをJupyterNotebookで実行するためのPythonパッケージを記述
dependencies = [
    "ommx >= 1.4.1, < 2.0.0",
    "ommx-python-mip-adapter >= 1.4.0, < 2.0.0",
    "matplotlib",
    "networkx",
]

# ドキュメントを生成したり、検証するためのPythonパッケージを記述
[dependency-groups]
dev = [
    "nbconvert >= 7.16.4",
    "jupyter-book >= 1.0.0, < 2.0.0",
]
