[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "ommx"
description = "Open Mathematical prograMming eXchange (OMMX)"
authors = [
    { name="Jij Inc.", email="info@j-ij.com" },
]
# readme = "README.md" # TODO: Resolve an error when pip install
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "License :: OSI Approved :: Apache Software License",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "numpy>=1.23.0, <2.0.0",
    "protobuf>=5.26.1, <6.0.0",
]

[project.optional-dependencies]
dev = [
    "mypy-protobuf",
    "mypy>=0.910",
    "pyright",
    "pytest",
    "ruff >= 0.4.4, < 0.5.0",
    "sphinx",
    "sphinx-autoapi",
    "sphinx_fontawesome",
    "sphinx_rtd_theme",
    "types-protobuf>=0.1.14",
]

[project.urls]
Repository = "https://github.com/Jij-Inc/ommx"
Issues = "https://github.com/Jij-Inc/ommx/issues"

[tool.maturin]
module-name = "ommx._ommx_rust"
features = ["pyo3/extension-module"]
