[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "ommx"

version = "0.3.1"
description = "Open Mathematical prograMming eXchange (OMMX)"
authors = [{ name="Jij Inc.", email="info@j-ij.com" }]
readme = "README.md"

classifiers = [
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "License :: OSI Approved :: Apache Software License",
    "License :: OSI Approved :: MIT License",
]

requires-python = ">=3.8"
dependencies = [
    "numpy>=1.23.0, <2.0.0",
    "pandas>=2.0.0, <3.0.0",
    "protobuf>=5.26.1, <6.0.0",
    "python-dateutil>=2.9.0, <3.0.0",
]

[project.optional-dependencies]
dev = [
    "jupyterlab",
    "matplotlib",
    "mypy-protobuf",
    "mypy>=0.910",
    "networkx",
    "pyright",
    "pytest",
    "ruff >= 0.4.4, < 0.5.0",
    "sphinx",
    "sphinx-autoapi",
    "sphinx_fontawesome",
    "sphinx_rtd_theme",
    "types-protobuf>=0.1.14",
]

[project.urls]
Repository = "https://github.com/Jij-Inc/ommx"
Issues = "https://github.com/Jij-Inc/ommx/issues"

[tool.maturin]
module-name = "ommx._ommx_rust"
features = ["pyo3/extension-module"]
