[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ommx_openjij_adapter"
version = "1.8.6"

description = "OMMX Adapter for OpenJij."
authors = [{ name = "Jij Inc.", email = "info@j-ij.com" }]
readme = "README.md"

# NOTE: openjij doesn't support newer scipy,
# which prevents to run with Python 3.13+.
requires-python = ">=3.9, <3.13"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: Apache Software License",
  "License :: OSI Approved :: MIT License",
]
dependencies = ["ommx>=1.8.6,<2.0.0", "openjij>=0.9.2"]

[dependency-groups]
dev = [
  "jupyter>=1.1.1",
  "jupyterlab>=4.3.5",
  "markdown-code-runner>=2.1.0",
  "matplotlib>=3.9.4",
  "mypy-protobuf>=3.6.0",
  "nbconvert>=7.16.6",
  "nbformat>=5.9.2",
  "networkx>=3.2.1",
  "pyright>=1.1.394",
  "pytest>=8.3.4",
  "pytest-github-actions-annotate-failures",
  "pyyaml>=6.0.2",
  "ruff>=0.9.6",
  "tomlkit>=0.13.2",
]
[project.urls]
Repository = "https://github.com/Jij-Inc/ommx"
Issues = "https://github.com/Jij-Inc/ommx/issues"
