[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ommx_pyscipopt_adapter"
version = "1.4.3"
description = "An adapter for the SCIP from OMMX."
authors = [
    { name="Jij Inc.", email="info@j-ij.com" },
]
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: Apache Software License",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "ommx >= 1.4.1, < 2.0.0",
    "PySCIPOpt >= 5.1.0, < 6.0.0",
]


[project.optional-dependencies]
dev = [
    "markdown-code-runner",
    "pyright",
    "pytest",
    "ruff",
]
