[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ommx_pyscipopt_adapter"
version = "1.8.6"
description = "An adapter for the SCIP from OMMX."
authors = [{ name = "Jij Inc.", email = "info@j-ij.com" }]
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "License :: OSI Approved :: Apache Software License",
  "License :: OSI Approved :: MIT License",
]
dependencies = ["ommx >= 1.8.6, < 2.0.0", "PySCIPOpt >= 5.4.0, < 6.0.0"]

[project.urls]
Repository = "https://github.com/Jij-Inc/ommx"
Issues = "https://github.com/Jij-Inc/ommx/issues"

[dependency-groups]
dev = [
  "jupyter>=1.1.1",
  "jupyterlab>=4.3.5",
  "markdown-code-runner>=2.1.0",
  "matplotlib>=3.9.4",
  "mypy-protobuf>=3.6.0",
  "nbconvert>=7.16.6",
  "nbformat>=5.9.2",
  "networkx>=3.2.1",
  "pyright>=1.1.394",
  "pytest>=8.3.4",
  "pytest-github-actions-annotate-failures",
  "pyyaml>=6.0.2",
  "ruff>=0.9.6",
  "tomlkit>=0.13.2",
]
