[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ommx_python_mip_adapter"
version = "2.3.0"

description = "An adapter for the Python-MIP from/to OMMX."
authors = [{ name = "Jij Inc.", email = "info@j-ij.com" }]
readme = "README.md"

requires-python = ">=3.10"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "License :: OSI Approved :: Apache Software License",
  "License :: OSI Approved :: MIT License",
]

# FIXME 
# ======
# To support Python 3.12 and Apple silicon systems, this requires latest version of Python-MIP (will be 1.16.0?),
# which does not release yet. https://github.com/coin-or/python-mip/issues/384
# This project uses dev-dependency to use the latest version of Python-MIP not to include pre-release version in the release.
dependencies = [
  "ommx >= 2.0.0b3, < 3.0.0",
  "mip >= 1.15.0, < 2.0.0",
  "cffi >= 1.15.0, < 2.0.0",
]

[project.urls]
Repository = "https://github.com/Jij-Inc/ommx"
Issues = "https://github.com/Jij-Inc/ommx/issues"

[dependency-groups]
dev = ["mip @ git+https://github.com/coin-or/python-mip.git"]
