# This is a crate built as a sub Python package `ommx._ommx_rust`

[package]
name = "_ommx_rust"

# The version of Python package `ommx` is determined in `pyproject.toml`. This version is only for build-time information.
version.workspace = true
edition.workspace = true
license.workspace = true

# This crate itself is not released to crates.io.
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "stub_gen"
doc = false
required-features = ["stub_gen"]

[features]
stub_gen = ["pyo3-stub-gen"]

[dependencies.ommx]
path = "../../rust/ommx"

[dependencies]
anyhow.workspace = true
approx.workspace = true
derive_more.workspace = true
ocipkg.workspace = true
pyo3.workspace = true
pyo3-log.workspace = true
pyo3-stub-gen = { workspace = true, optional = true }
serde-pyobject.workspace = true
serde_json.workspace = true
