# This is a crate built as a sub Python package `ommx._ommx_rust`

[package]
name = "_ommx_rust"

# The version of Python package `ommx` is determined in `pyproject.toml`. This version is only for build-time information.
version.workspace = true
edition.workspace = true
license.workspace = true

# This crate itself is not released to crates.io.
publish = false

[lints]
workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "stub_gen"
doc = false

[features]
default = ["remote-artifact"]
remote-artifact = ["ommx/remote-artifact"]

[dependencies.ommx]
path = "../../rust/ommx"
default-features = false

[dependencies]
anyhow.workspace = true
approx.workspace = true
derive_more.workspace = true
fnv.workspace = true
ocipkg.workspace = true
pyo3-log.workspace = true
pyo3-stub-gen.workspace = true
pyo3.workspace = true
serde-pyobject.workspace = true
serde_json.workspace = true
