# This is a crate built as a sub Python package `ommx._ommx_rust`

[package]
name = "_ommx_rust"

# The version of Python package `ommx` is determined in `pyproject.toml`. This version is only for build-time information.
version.workspace = true
edition.workspace = true
license.workspace = true

# This crate itself is not released to crates.io.
publish = false

[lints]
workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "stub_gen"
doc = false

[features]
default = ["remote-artifact", "tracing-bridge"]
remote-artifact = ["ommx/remote-artifact"]
# Bridge Rust `tracing` spans to Python OpenTelemetry via `pyo3-tracing-opentelemetry`.
# Disabled on pyodide/wasm32-unknown-emscripten builds because the opentelemetry
# crate pulls in `js-sys`/`wasm-bindgen` on wasm32, which Pyodide cannot load.
tracing-bridge = ["dep:pyo3-tracing-opentelemetry"]

[dependencies.ommx]
path = "../../rust/ommx"
default-features = false

[dependencies]
anyhow.workspace = true
approx.workspace = true
derive_more.workspace = true
fnv.workspace = true
ocipkg.workspace = true
pyo3-stub-gen.workspace = true
pyo3-tracing-opentelemetry = { workspace = true, optional = true }
pyo3.workspace = true
serde-pyobject.workspace = true
serde_json.workspace = true
tracing.workspace = true
