[build-system]
requires = ["maturin == 1.8.2"]
build-backend = "maturin"

[project]
name = "ommx"

version = "2.0.0-alpha"
description = "Open Mathematical prograMming eXchange (OMMX)"
authors = [{ name = "Jij Inc.", email = "info@j-ij.com" }]
readme = "README.md"

classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Rust",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
  "License :: OSI Approved :: Apache Software License",
  "License :: OSI Approved :: MIT License",
]

requires-python = ">=3.9"
dependencies = [
  "numpy>=1.23.0, <3.0.0",
  "pandas>=2.0.0, <3.0.0",
  "protobuf>=5.26.1, <6.0.0",
  "pyarrow>=16.0.0, <20.0.0",
  "python-dateutil>=2.9.0, <3.0.0",
  "typing-extensions >= 4.12.2, < 5.0.0",
]

[project.urls]
Repository = "https://github.com/Jij-Inc/ommx"
Issues = "https://github.com/Jij-Inc/ommx/issues"

[tool.maturin]
module-name = "ommx._ommx_rust"
features = ["pyo3/extension-module", "pyo3/abi3-py39"]

[tool.ruff.lint]
per-file-ignores = { "*_pb2.py" = ["ALL"] }

[tool.uv]
cache-keys = [
  { file = "pyproject.toml" },
  { file = "src/**/*.rs" },
  # Python SDK should be rebuilt when Rust SDK is updated.
  { file = "../../Cargo.lock" },
  { file = "../../rust/ommx/src/**/*.rs" },
]
