[package]
name = "dataset"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
csv.workspace = true
ommx = { path = "../ommx" }
serde = { workspace = true, features = ["derive"] }
tracing.workspace = true
tracing-subscriber.workspace = true
zip.workspace = true
