[package]
name = "ommx-derive"

version.workspace = true
edition.workspace = true
license.workspace = true

# This crate is only for internal use within the ommx workspace
publish = false

[lib]
proc-macro = true

[lints]
workspace = true

[dependencies]
proc-macro2.workspace = true
quote.workspace = true
syn.workspace = true
