[package]
name = "ommx-derive"

version.workspace = true
edition.workspace = true
license.workspace = true

# This crate is only for internal use within the ommx workspace
publish = false

[lib]
proc-macro = true

[lints]
workspace = true

[dependencies]
proc-macro2.workspace = true
quote.workspace = true
syn.workspace = true

[dev-dependencies]
insta.workspace = true
# `syn = "full"` is needed by prettyplease to parse the generated `syn::File`.
prettyplease = "0.2.37"
syn = { workspace = true, features = ["full"] }
